--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Conke Hu
+title: >
+  <h1>胡思<sub>不乱想</sub></h1>
+  <h1>胡言<sub>不乱语</sub></h1>
+  <h1>胡作<sub>不非为</sub></h1>
 email: conke.hu@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  <h1>欢迎来到Conke胡的个人博客！</h1>
+  <br>
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
